fixing the vertical align and margins

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html,
 body {
   min-width: 100%;
   min-height: 100%;
+  font-size: 100%;
   margin: 0;
   padding: 0;
 }
@@ -13,20 +14,37 @@ body {
 
 /* Grid */
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
 .container {
   display: table;
   vertical-align: middle;
-  min-width: 18rem;
-  padding: 0 1rem;
+  min-width: 20em;
   margin: 0 auto;
-  margin-top: 1rem;
+  margin-top: 1em;
   min-height: 28vh;
 }
 
 @media screen and (min-width: 20rem) {
   .container {
-    max-width: 22rem;
+    width: 22em;
   }
+}
+
+@media screen and (min-width: 30rem) {
+  .container {
+    width: 30em;
+  }
+}
+
+.main-header_temp {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-end;
 }
 
 /*
@@ -42,19 +60,34 @@ body {
 }
 */
 
+.logo-container_temp {
+  display: flex;
+  align-items: center;
+}
+
 .logo_temp{
   display: block;
-  width: 10rem;
+  width: 20em;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 1em;
+  margin-bottom: 1em; 
+}
+
+@media screen and (min-width: 20rem) {
+  .logo_temp {
+    width: 15em;
+  }
+}
+
+@media screen and (min-width: 30rem) {
+  .logo_temp {
+    width: 10em;
+  }
 }
 
 .main-bio_temp {
-  padding-top: 1em;
   padding-left: 2em;
   padding-right: 2em;
-  margin-top: 1em;
 }
 
 .main-links_temp {
@@ -65,7 +98,6 @@ body {
 
 body {
   color: #FFF9F3;
-  font-size: 100%;
   font-family: monospace;
 }
 
@@ -85,4 +117,20 @@ body {
 
 a {
   color: #FFF9F3;
+}
+
+.main-header_temp {
+  font-size: 1.4em;
+}
+
+.main-bio_temp {
+  font-size: 1.4em;
+}
+
+p {
+  font-size: 1em;
+}
+
+h1 {
+  -webkit-margin-after: 0;
 }
